added ga and updated page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>puayhiang.com</title>
+<title>Goh Puay Hiang</title>
 <style>
     .invisible-text {
         color:white;
@@ -28,5 +28,13 @@
 <a href="https://www.google.com/searchbyimage?image_url=https%3A%2F%2Fpuayhiang.com%2Fstatic%2Fimg%2Fprofile.jpeg">
     <img src="static/img/profile.jpeg" alt="online" class="center"> 
 </a>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177342976-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-177342976-1');
+</script>
 </body>
 </html>
