--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 </head>
 <body>
 
-<a href="https://gphofficialcom.github.io" class="invisible-text">&lt;</a>
+<a href="https://gphofficialcom.github.io" class="invisible-text"></a>
 <a href="https://www.google.com/searchbyimage?image_url=https%3A%2F%2Fpuayhiang.com%2Fstatic%2Fimg%2Fprofile.jpeg">
-    <img src="static/img/profile.jpeg" alt="online" class="center"> 
+    <img src="static/img/profile.jpeg" class="center"> 
 </a>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177342976-1"></script>
 <script>
